remove prefix in rolesSecurity, add verification in getRoles